@@ -1,3 +1,10 @@
+Wed Jul 27 08:42:34 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * ciao/Containers/Container_Base_T.cpp:
+
+          Fixed some errors in the logging messages that would cause segfaults
+          on some platforms.
+
 Wed Jun 29 19:12:21 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/DDS_Base_Connector_T.h:
